--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'net.danlew:android.joda:2.7.2'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
-    compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
     compile 'com.github.medyo:fancybuttons:1.5@aar'
+    compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
+    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.1.1' // (v4.5)
+    compile 'com.joanzapata.iconify:android-iconify-typicons:2.1.1' // (v2.0.7)
 }
